try to fix spacing

--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ a:hover {
 
 #project-main-body {
   width: 100vw;
-  height: 80vh;
+  /* height: 80vh; */
   display: flex;
   justify-content: center;
   align-items: center;
